--- a/mdk02.01/материал/4. лекция№4_Установка_ОС_Альт_и_базовая_настройка.md
+++ b/mdk02.01/материал/4. лекция№4_Установка_ОС_Альт_и_базовая_настройка.md
@@ -13,6 +13,24 @@
 
 После установки ОС нужно выполнить базовую настройку: обновить систему, настроить сеть, создать пользователей и т.д. Особое внимание уделим установке в UEFI-режиме, который становится стандартом на современных компьютерах.
 
+**Цели лекции:**
+- Научиться выбирать подходящий дистрибутив ОС «Альт»
+- Освоить подготовку к установке системы
+- Владеть навыками записи установочного носителя
+- Уметь выполнять ручную установку ОС
+- Научиться настраивать систему после установки
+- Понимать особенности установки в UEFI-режиме
+
+**Задачи лекции:**
+1. Изучить требования к аппаратному обеспечению
+2. Освоить резервное копирование данных
+3. Научиться настраивать BIOS/UEFI
+4. Выбрать и скачать подходящий дистрибутив
+5. Записать установочный носитель
+6. Выполнить установку ОС с ручной разметкой дисков
+7. Настроить систему после установки
+8. Понять особенности UEFI-установки
+
 К концу лекции вы сможете самостоятельно установить ОС «Альт» и выполнить начальную настройку.
 
 ## Подготовка к установке ОС «Альт»
@@ -23,25 +41,53 @@
 
 ОС «Альт» работает на большинстве современных компьютеров, но есть минимальные и рекомендуемые требования. Если ваш компьютер не соответствует минимальным требованиям, установка может завершиться неудачей или система будет работать очень медленно.
 
-**Минимальные требования:**
-- Процессор: 64-битный (x86_64), частота не менее 1 ГГц (например, Intel Core 2 Duo или аналогичный AMD).
-- Оперативная память (RAM): 1 ГБ для рабочей станции, 512 МБ для сервера (но рекомендуется больше для комфортной работы).
-- Жесткий диск: 5 ГБ свободного места для минимальной установки (рекомендуется 20 ГБ и более).
-- USB-порт: Для загрузки с флешки (рекомендуется USB 2.0 или 3.0).
-- Видеокарта: Поддержка VGA или выше, разрешение не менее 800x600.
-- Сеть: Ethernet или Wi-Fi для загрузки обновлений.
-
-**Рекомендуемые требования для комфортной работы:**
-- Процессор: 2 ГГц и выше, многоядерный.
-- RAM: 4 ГБ для рабочей станции, 2 ГБ для сервера.
-- Диск: SSD на 50 ГБ и более.
-- Монитор: 1920x1080 и выше.
+**Таблица: Требования к аппаратному обеспечению**
+| Компонент | Минимальные требования | Рекомендуемые требования | Комментарии |
+|-----------|----------------------|-------------------------|-------------|
+| Процессор | 64-битный, 1 ГГц | 2 ГГц, многоядерный | Intel Core 2 Duo или аналогичный AMD |
+| Оперативная память | 1 ГБ (Workstation) / 512 МБ (Server) | 4 ГБ (Workstation) / 2 ГБ (Server) | Для комфортной работы рекомендуется больше |
+| Жесткий диск | 5 ГБ | 50 ГБ и более | SSD предпочтительнее HDD |
+| Видеокарта | VGA, 800x600 | 1920x1080 и выше | Для графического интерфейса |
+| Сеть | Ethernet или Wi-Fi | Ethernet 1 Гбит/с | Для загрузки обновлений |
+| USB-порт | USB 2.0 | USB 3.0 | Для загрузки с флешки |
 
 **Как проверить совместимость:**
-1. Откройте «Свойства системы» в Windows (Win + Pause) или используйте команду `lscpu` в Linux/Mac.
-2. Проверьте модель процессора на сайте производителя (Intel или AMD).
-3. Измерьте объем RAM в диспетчере задач или с помощью `free -h` в терминале.
-4. Для диска используйте «Этот компьютер» в Windows или `df -h` в Linux.
+
+**В Windows:**
+```bash
+# Откройте командную строку и выполните:
+systeminfo | findstr /C:"Процессор" /C:"Память"
+wmic diskdrive get model,size
+```
+
+**В Linux:**
+```bash
+# Проверка процессора
+lscpu | grep "Model name"
+
+# Проверка памяти
+free -h
+
+# Проверка диска
+df -h
+
+# Проверка видеокарты
+lspci | grep -i vga
+```
+
+**В macOS:**
+```bash
+# Информация о системе
+system_profiler SPHardwareDataType
+
+# Информация о диске
+diskutil list
+```
+
+**Советы по совместимости:**
+- Для виртуальных машин: выделите минимум 2 ядра CPU и 2 ГБ RAM
+- Для старых компьютеров: используйте Alt Server без графического интерфейса
+- Проверьте поддержку UEFI в спецификациях материнской платы
 
 Если ваш компьютер старый, рассмотрите виртуальную машину (VirtualBox, VMware) для тестирования установки без риска для основных данных.
 
@@ -49,12 +95,71 @@
 
 Установка ОС перезапишет весь диск, поэтому все данные будут потеряны. **Обязательно сделайте резервную копию!**
 
+**Таблица: Методы резервного копирования**
+| Метод | Преимущества | Недостатки | Рекомендации |
+|------|-------------|------------|--------------|
+| Внешний HDD/SSD | Быстро, надежно, большой объем | Требует покупки | Для больших объемов данных |
+| USB-флешка | Дешево, компактно | Ограниченный объем | Для небольших файлов |
+| Облако | Доступ из любой точки | Зависит от интернета | Для важных документов |
+| Сетевой диск | Автоматизация | Требует настройки сети | Для корпоративных сред |
+
 **Шаги для резервного копирования:**
-1. Определите, какие данные важны: документы, фото, видео, настройки программ.
-2. Выберите носитель: внешний жесткий диск (HDD/SSD), USB-флешка, облако (Google Drive, Yandex.Диск).
-3. В Windows: Используйте встроенное «Резервное копирование и восстановление» или программы вроде Acronis True Image.
-4. В Linux/Mac: Команда `rsync` или графические программы вроде Déjà Dup.
-5. Проверьте копию: Убедитесь, что файлы копируются правильно и доступны.
+
+**1. Определение важных данных:**
+```bash
+# В Linux/Mac: Найдите большие файлы
+find ~ -type f -size +100M -exec ls -lh {} \;
+
+# В Windows: Используйте "Этот компьютер" для анализа диска
+```
+
+**2. Выбор носителя:**
+- **Для документов:** USB-флешка 8-16 ГБ
+- **Для фото/видео:** Внешний HDD 1 ТБ и более
+- **Для системных файлов:** Облако или сетевой диск
+
+**3. Копирование данных:**
+
+**В Windows:**
+```bash
+# Используйте команду xcopy для копирования
+xcopy "C:\Users\Имя\Documents" "D:\Backup\Documents" /E /H /C /I
+```
+
+**В Linux:**
+```bash
+# Используйте rsync для надежного копирования
+rsync -av --progress ~/Documents /media/backup/Documents/
+
+# Или cp для простого копирования
+cp -r ~/Documents /media/backup/
+```
+
+**В macOS:**
+```bash
+# Используйте cp или rsync
+cp -r ~/Documents /Volumes/Backup/Documents/
+```
+
+**4. Проверка копии:**
+```bash
+# Проверка контрольных сумм
+md5sum файл1 файл2  # Linux
+certutil -hashfile файл MD5  # Windows
+md5 файл  # macOS
+```
+
+**Типичные ошибки при резервном копировании:**
+- ❌ Копирование на тот же диск, где будет установка
+- ❌ Непроверка целостности копии
+- ❌ Забыть о скрытых файлах и папках
+- ❌ Не учитывать права доступа
+
+**✅ Правильный подход:**
+- Используйте отдельный физический носитель
+- Проверяйте контрольные суммы
+- Копируйте скрытые файлы (в Linux: `cp -r .*`)
+- Делайте тестовое восстановление
 
 **Предупреждение:** Не копируйте данные на тот же диск, где будет устанавливаться ОС. Используйте отдельный носитель.
 
@@ -167,34 +272,107 @@
 
 ### Инструменты для записи
 
-**В Windows:**
-1. **Rufus (рекомендуется):** Бесплатная программа.
-   - Скачайте с https://rufus.ie/.
-   - Запустите, выберите USB-устройство.
-   - Выберите ISO-файл.
-   - Нажмите "Старт" — процесс займет 5-10 минут.
+**Таблица: Сравнение инструментов для записи ISO**
+| Инструмент | Платформа | Сложность | Скорость | Особенности |
+|-----------|-----------|-----------|----------|-------------|
+| Rufus | Windows | Низкая | Высокая | Рекомендуется для новичков |
+| Etcher | Все платформы | Низкая | Средняя | Удобный интерфейс |
+| dd | Linux/macOS | Высокая | Высокая | Мощный, но требует знаний |
+| Windows USB/DVD Tool | Windows | Средняя | Средняя | Официальный от Microsoft |
 
-2. **Windows USB/DVD Download Tool:** Официальный от Microsoft, но менее удобный.
+**Пошаговая инструкция для каждого инструмента:**
 
-**В Linux:**
-1. **dd (командная строка):**
-   - Вставьте флешку, найдите ее устройство: `lsblk` (например, /dev/sdb).
-   - Команда: `sudo dd if=путь/к/файлу.iso of=/dev/sdb bs=4M status=progress`
-   - Подождите завершения (10-15 минут).
+**1. Rufus (Windows) - Рекомендуется для новичков:**
+```bash
+# Скачайте и запустите Rufus
+# Выберите USB-устройство (важно выбрать правильное!)
+# Выберите ISO-файл
+# Файловая система: FAT32 (для UEFI) или NTFS (для Legacy)
+# Размер кластера: Default
+# Нажмите "Старт"
+# Подождите завершения (5-10 минут)
+```
 
-2. **Etcher:** Графическая программа, скачайте с https://www.balena.io/etcher/.
-   - Выберите ISO, флешку, нажмите "Flash".
+**2. Etcher (Универсальный):**
+```bash
+# Скачайте с https://www.balena.io/etcher/
+# Запустите программу
+# Выберите ISO-файл
+# Выберите USB-устройство
+# Нажмите "Flash!"
+# Дождитесь завершения и проверки
+```
 
-**В macOS:**
-1. **Etcher:** Аналогично Linux.
-2. **Командная строка:** `sudo dd if=путь/к/файлу.iso of=/dev/disk2 bs=1m` (найдите диск с `diskutil list`).
+**3. dd (Linux/macOS) - Для продвинутых пользователей:**
+```bash
+# 1. Найдите устройство USB
+lsblk  # Linux
+diskutil list  # macOS
+
+# 2. Выполните запись (ОСТОРОЖНО! Проверьте путь!)
+sudo dd if=altlinux.iso of=/dev/sdb bs=4M status=progress oflag=sync
+
+# 3. Дождитесь завершения (10-15 минут)
+# 4. Извлеките флешку безопасно
+sync
+sudo eject /dev/sdb  # Linux
+diskutil eject /dev/disk2  # macOS
+```
+
+**4. Windows USB/DVD Download Tool:**
+```bash
+# Скачайте с Microsoft
+# Запустите программу
+# Выберите ISO-файл
+# Выберите USB-устройство
+# Нажмите "Начать копирование"
+```
+
+**Типичные ошибки при записи:**
+- ❌ Выбор не того USB-устройства (можно повредить системный диск)
+- ❌ Недостаточный объем флешки (менее 4 ГБ)
+- ❌ Неправильная файловая система (NTFS для UEFI может не работать)
+- ❌ Прерывание процесса записи
+
+**✅ Правильный подход:**
+- Всегда проверяйте путь к устройству
+- Используйте флешку 4 ГБ и более
+- Для UEFI выбирайте FAT32
+- Не прерывайте процесс записи
 
 ### Проверка носителя
 
 После записи проверьте, что флешка загружается:
-1. Вставьте в компьютер.
+
+**1. Проверка содержимого:**
+```bash
+# В Linux: Проверьте, что файлы ISO доступны
+mount /dev/sdb1 /mnt
+ls /mnt  # Должны быть файлы загрузчика
+umount /mnt
+```
+
+**2. Проверка загрузки:**
+1. Вставьте флешку в компьютер.
 2. Перезагрузите и войдите в BIOS — убедитесь, что флешка видна в списке устройств.
-3. Если не загружается, попробуйте другую флешку или перезапишите.
+3. Установите флешку на первое место в Boot Order.
+4. Сохраните и выйдите — компьютер должен загрузиться с флешки.
+5. Появится меню загрузчика GRUB.
+
+**3. Тестирование в виртуальной машине:**
+```bash
+# VirtualBox
+# Создайте новую виртуальную машину
+# В настройках выберите USB-устройство
+# Запустите виртуальную машину
+# Должна появиться загрузка с ISO
+```
+
+**Если флешка не загружается:**
+- Попробуйте другой USB-порт (лучше USB 2.0)
+- Перезапишите флешку другим инструментом
+- Проверьте настройки BIOS/UEFI
+- Используйте другую флешку
 
 ## Процесс ручной установки ОС «Альт»
 
@@ -248,34 +426,86 @@
 
 Это один из самых важных шагов. Разметка определяет, как диск будет разделен на разделы.
 
+**Таблица: Сравнение MBR и GPT**
+| Характеристика | MBR | GPT |
+|---------------|-----|-----|
+| Максимальный размер диска | 2 ТБ | 9 ЗБ (зеттабайт) |
+| Количество разделов | 4 первичных | 128 (в Linux) |
+| Поддержка UEFI | Нет | Да |
+| Надежность | Низкая (одна копия) | Высокая (две копии) |
+| Совместимость | Старые системы | Современные системы |
+
 **Основные понятия:**
 - **MBR (Master Boot Record):** Старый стандарт для дисков до 2 ТБ. Поддерживает 4 первичных раздела.
 - **GPT (GUID Partition Table):** Новый стандарт для больших дисков, поддерживает UEFI. Рекомендуется для современных ПК.
 - **Разделы:** Логические области на диске.
-  - / (root): Корневой раздел, основная система (минимум 10 ГБ, рекомендуем 20+ ГБ).
-  - /boot: Для загрузчика (200-500 МБ, если отдельный).
-  - swap: Виртуальная память (размер RAM или 2x RAM для гибернации).
-  - /home: Для пользовательских данных (остальное место).
+
+**Таблица: Рекомендуемые размеры разделов**
+| Раздел | Размер | Назначение | Файловая система |
+|--------|--------|------------|------------------|
+| EFI | 512 МБ | Загрузка UEFI | FAT32 |
+| /boot | 1 ГБ | Загрузочные файлы | ext4 |
+| / (root) | 20-50 ГБ | Операционная система | ext4/Btrfs |
+| swap | 2-8 ГБ | Виртуальная память | swap |
+| /home | Остальное | Пользовательские данные | ext4 |
+
+**Схема разметки диска:**
+```
+┌─────────────────────────────────────────────────────────┐
+│                        Диск (1 ТБ)                      │
+├─────────────────┬─────────────┬─────────────┬───────────┤
+│      EFI        │    /boot    │      /      │   /home   │
+│    (512 МБ)     │   (1 ГБ)    │  (30 ГБ)    │ (Остальное)│
+│    FAT32        │    ext4     │    ext4     │   ext4    │
+└─────────────────┴─────────────┴─────────────┴───────────┘
+```
 
 **Автоматическая разметка:**
 - Установщик предложит автоматическую: Выберите диск, нажмите "Автоматически".
 - Создает стандартные разделы: /, swap, /home.
 
 **Ручная разметка (рекомендуется для обучения):**
+
+**Сценарий 1: Для новичка (простая разметка)**
 1. Выберите диск (например, sda).
 2. Создайте таблицу разделов: GPT для UEFI, MBR для Legacy.
 3. Создайте разделы:
    - EFI (для UEFI): 512 МБ, FAT32, флаг esp.
-   - /boot: 1 ГБ, ext4.
-   - /: 20-50 ГБ, ext4 или Btrfs.
-   - swap: 4-8 ГБ, swap.
+   - /: 30 ГБ, ext4.
+   - swap: 4 ГБ, swap.
    - /home: Остальное, ext4.
-4. Назначьте точки монтирования: / для root, /home для home и т.д.
+4. Назначьте точки монтирования.
+
+**Сценарий 2: Для продвинутого пользователя (гибкая разметка)**
+1. Создайте таблицу разделов GPT.
+2. Разделы:
+   - EFI: 512 МБ, FAT32, флаг esp.
+   - /boot: 1 ГБ, ext4.
+   - /: 20 ГБ, ext4.
+   - /var: 10 ГБ, ext4 (для логов и временных файлов).
+   - /tmp: 5 ГБ, ext4 (для временных файлов).
+   - swap: 8 ГБ, swap.
+   - /home: Остальное, ext4.
 
 **Файловые системы:**
-- ext4: Стандарт для Linux, надежный.
-- Btrfs: Современная, с snapshots, но сложнее.
-- XFS: Для больших файлов.
+- **ext4:** Стандарт для Linux, надежный, поддерживает большие файлы.
+- **Btrfs:** Современная, с snapshots, сжатием, но сложнее в обслуживании.
+- **XFS:** Для больших файлов и высокой производительности.
+- **FAT32:** Только для EFI раздела (обязательно).
+
+**Типичные ошибки при разметке:**
+- ❌ Недостаточно места для корневого раздела (менее 10 ГБ)
+- ❌ Забыть про EFI раздел при UEFI установке
+- ❌ Неправильная файловая система для EFI (не FAT32)
+- ❌ Слишком маленький swap раздел
+- ❌ Неправильные точки монтирования
+
+**✅ Правильный подход:**
+- Для UEFI обязательно создавайте EFI раздел
+- Корневому разделу выделяйте минимум 20 ГБ
+- Swap = RAM (или 2x RAM для гибернации)
+- Используйте ext4 для большинства разделов
+- Проверяйте точки монтирования перед применением
 
 **Советы:**
 - Не трогайте разделы с данными, если они есть.
@@ -304,6 +534,30 @@
 - Появится сообщение "Установка завершена" — извлеките носитель и перезагрузите.
 
 **Не прерывайте процесс:** Это может повредить диск.
+
+**Типичные проблемы при установке:**
+
+**Проблема 1: Установка зависла на определенном этапе**
+- **Причина:** Медленный диск, нехватка RAM, поврежденный ISO.
+- **Решение:** Подождите 10-15 минут, если не идет — перезагрузите и проверьте ISO.
+
+**Проблема 2: Ошибка при создании загрузчика**
+- **Причина:** Неправильная разметка, отсутствие EFI раздела при UEFI.
+- **Решение:** Проверьте разметку диска, создайте EFI раздел для UEFI.
+
+**Проблема 3: Система не загружается после установки**
+- **Причина:** Неправильный порядок загрузки в BIOS, поврежденный загрузчик.
+- **Решение:** Проверьте Boot Order, переустановите GRUB.
+
+**Проблема 4: Ошибка "No bootable device"**
+- **Причина:** GRUB не установлен, поврежденный MBR/GPT.
+- **Решение:** Переустановите систему, проверьте разметку.
+
+**✅ Профилактика проблем:**
+- Всегда проверяйте целостность ISO
+- Делайте резервную копию данных
+- Правильно настраивайте BIOS/UEFI
+- Выбирайте правильную разметку диска
 
 ## Начальная загрузка и вход в систему
 
@@ -441,6 +695,34 @@
 
 Установка ОС «Альт» — это процесс, требующий внимания к деталям, но выполнимый для новичков. Мы рассмотрели подготовку, выбор дистрибутива, запись носителя, пошаговую установку, первый запуск и настройку. Особенности UEFI важны для современных систем.
 
+**Ключевые моменты:**
+- Важно тщательно подготовиться: проверить совместимость, сделать резервную копию
+- Правильный выбор дистрибутива зависит от назначения системы
+- Запись установочного носителя требует внимательности к деталям
+- Разметка дисков — один из самых важных этапов установки
+- UEFI-установка требует дополнительных шагов (EFI раздел, Secure Boot)
+
+**Лучшие практики:**
+- Всегда проверяйте целостность ISO-файла
+- Делайте резервную копию данных перед установкой
+- Тщательно настраивайте BIOS/UEFI
+- Выбирайте правильную разметку диска
+- Для UEFI обязательно создавайте EFI раздел
+
+**Связь с лабораторными работами:**
+- Лабораторное занятие №1: Установка операционных систем
+- Лабораторное занятие №2: Работа в командной строке
+
+**Чек-лист для самопроверки:**
+- [ ] Проверил совместимость оборудования
+- [ ] Сделал резервную копию данных
+- [ ] Скачал и проверил ISO-файл
+- [ ] Записал установочный носитель
+- [ ] Настроил BIOS/UEFI
+- [ ] Выполнил установку ОС
+- [ ] Настроил систему после установки
+- [ ] Проверил работоспособность системы
+
 Базовая настройка включает обновление, установку ПО и настройку сети. После этого система готова к использованию. В следующих лекциях мы углубимся в администрирование.
 
 ## Вопросы для самоконтроля
@@ -456,9 +738,53 @@
 9. Как обновить систему после установки?
 10. Какие меры безопасности следует принять после установки?
 
+## Практические задания
+
+**Задание 1: Подготовка к установке**
+1. Проверьте совместимость вашего компьютера с ОС «Альт»
+2. Сделайте резервную копию важных данных
+3. Скачайте ISO-файл Alt Workstation
+4. Проверьте целостность ISO с помощью контрольной суммы
+
+**Задание 2: Запись установочного носителя**
+1. Запишите ISO на USB-флешку с помощью Rufus
+2. Проверьте, что флешка загружается
+3. Протестируйте загрузку в виртуальной машине
+
+**Задание 3: Установка системы**
+1. Выполните установку ОС «Альт» на виртуальную машину
+2. Используйте ручную разметку дисков
+3. Создайте пользователя с правами администратора
+4. Настройте сеть и обновите систему
+
+**Задание 4: Диагностика проблем**
+1. Смоделируйте ситуацию с поврежденным ISO
+2. Попробуйте установить систему с неправильной разметкой
+3. Зафиксируйте возникающие ошибки и способы их решения
+
+## Глоссарий терминов
+
+- **ОС (Операционная система):** Комплекс программ, управляющих аппаратными и программными ресурсами компьютера
+- **Дистрибутив:** Готовый комплект программного обеспечения, включающий ядро, системные программы и приложения
+- **ISO-файл:** Образ оптического диска, содержащий все файлы для установки системы
+- **BIOS:** Базовая система ввода-вывода, управляющая начальной загрузкой компьютера
+- **UEFI:** Современный интерфейс прошивки, заменяющий BIOS
+- **Разметка диска:** Процесс создания разделов на жестком диске
+- **MBR:** Главная загрузочная запись, содержащая информацию о разделах диска
+- **GPT:** Таблица разделов GUID, современный стандарт разметки дисков
+- **Файловая система:** Система организации данных на диске (ext4, FAT32 и т.д.)
+- **Swap:** Раздел виртуальной памяти для Linux
+- **GRUB:** Загрузчик, управляющий запуском операционной системы
+- **Secure Boot:** Функция UEFI для проверки подлинности загрузчика
+- **Резервное копирование:** Процесс создания копии данных для восстановления при необходимости
+- **DHCP:** Протокол автоматической настройки сетевых параметров
+- **NTP:** Протокол синхронизации времени
+
 ## Литература
 
 - Официальная документация ОС «Альт»: https://docs.altlinux.org/
 - Руководство по установке: https://www.altlinux.org/Installation
 - Форум ОС «Альт»: https://forum.altlinux.org/
 - Wiki: https://www.altlinux.org/UEFI
+- Книга "Linux System Administration" (Evi Nemeth et al.)
+- Книга "The Linux Command Line" (William Shotts)
