--- a/mdk02.01/материал/Тема_1.1/лекция№10_Настройка_сетевых_параметров_Часть_2.md
+++ b/mdk02.01/материал/Тема_1.1/лекция№10_Настройка_сетевых_параметров_Часть_2.md
@@ -3,5 +3,1116 @@
 ## Объем
 2 часа
 
-## Содержание лекции
-- Ручная настройка сетевых параметров. Подключение через PPPoE соединение. Межсетевой экран в ОС «Альт». Настройка маршрутизации, NAT.
+## Введение
+
+Продолжая изучение настройки сетевых параметров в ОС «Альт», в этой лекции мы рассмотрим более сложные аспекты сетевой конфигурации. Особое внимание будет уделено ручной настройке сетевых параметров, PPPoE-соединениям, настройке межсетевого экрана, а также маршрутизации и NAT.
+
+Эти темы особенно важны для системных администраторов, которым необходимо настраивать сложные сетевые конфигурации, обеспечивать безопасность сети и организовывать доступ к различным сетевым ресурсам.
+
+В ОС «Альт» доступны мощные инструменты для решения этих задач, позволяющие гибко управлять сетевыми соединениями и обеспечивать высокий уровень безопасности.
+
+**Цели лекции:**
+- Научиться настраивать сложные сетевые соединения
+- Освоить настройку PPPoE
+- Понимать принципы работы межсетевого экрана
+- Владеть навыками настройки маршрутизации и NAT
+
+**Задачи лекции:**
+1. Изучить ручную настройку сетевых параметров
+2. Освоить настройку PPPoE-соединений
+3. Понять архитектуру и принципы работы межсетевого экрана
+4. Научиться настраивать firewalld и nftables
+5. Освоить основы маршрутизации
+6. Понять принципы работы NAT
+7. Научиться настраивать NAT в ОС «Альт»
+
+К концу лекции вы сможете эффективно настраивать сложные сетевые конфигурации и обеспечивать безопасность сетевых соединений.
+
+## Ручная настройка сетевых параметров
+
+Ручная настройка сетевых параметров — это важный навык для системного администратора, особенно когда необходимо настроить нестандартные сетевые конфигурации или устранить проблемы с автоматической настройкой.
+
+### Прямая настройка через ip команду
+
+**1. Настройка IP-адреса:**
+```bash
+# Установка IP-адреса
+sudo ip addr add 192.168.1.100/24 dev eth0
+
+# Просмотр установленного адреса
+ip addr show eth0
+
+# Удаление IP-адреса
+sudo ip addr del 192.168.1.100/24 dev eth0
+```
+
+**2. Включение/выключение интерфейса:**
+```bash
+# Включение интерфейса
+sudo ip link set eth0 up
+
+# Выключение интерфейса
+sudo ip link set eth0 down
+
+# Проверка состояния
+ip link show eth0
+```
+
+**3. Настройка маршрутов:**
+```bash
+# Добавление маршрута
+sudo ip route add 10.0.0.0/24 via 192.168.1.1 dev eth0
+
+# Добавление маршрута по умолчанию
+sudo ip route add default via 192.168.1.1 dev eth0
+
+# Просмотр таблицы маршрутизации
+ip route show
+
+# Удаление маршрута
+sudo ip route del 10.0.0.0/24 via 192.168.1.1 dev eth0
+```
+
+### Настройка через /etc/net (ручной способ)
+
+**1. Создание конфигурации вручную:**
+```bash
+# Создание каталога для интерфейса
+sudo mkdir -p /etc/net/ifaces/eth0
+
+# Создание файла options
+echo "type=eth
+name=eth0
+onboot=yes" | sudo tee /etc/net/ifaces/eth0/options
+
+# Создание файла с IP-адресом
+echo "192.168.1.100/24" | sudo tee /etc/net/ifaces/eth0/ipv4address
+
+# Создание файла с шлюзом
+echo "192.168.1.1" | sudo tee /etc/net/ifaces/eth0/ipv4gateway
+
+# Создание файла с DNS
+echo "8.8.8.8 1.1.1.1" | sudo tee /etc/net/ifaces/eth0/ipv4nameservers
+```
+
+**2. Применение конфигурации:**
+```bash
+# Перезапуск сети
+sudo /etc/init.d/network restart
+
+# Или перезагрузка интерфейса
+sudo ifdown eth0
+sudo ifup eth0
+```
+
+### Настройка через NetworkManager (ручной способ)
+
+**1. Создание соединения вручную:**
+```bash
+# Создание нового соединения
+nmcli connection add type ethernet con-name "Manual-Eth0" ifname eth0
+
+# Настройка статического IP
+nmcli connection modify "Manual-Eth0" ipv4.addresses 192.168.1.100/24
+nmcli connection modify "Manual-Eth0" ipv4.gateway 192.168.1.1
+nmcli connection modify "Manual-Eth0" ipv4.dns "8.8.8.8,1.1.1.1"
+nmcli connection modify "Manual-Eth0" ipv4.method manual
+
+# Активация соединения
+nmcli connection up "Manual-Eth0"
+```
+
+**2. Редактирование существующего соединения:**
+```bash
+# Просмотр существующих соединений
+nmcli connection show
+
+# Редактирование параметров
+nmcli connection modify "Connection-Name" ipv4.addresses 192.168.1.200/24
+nmcli connection modify "Connection-Name" ipv4.gateway 192.168.1.1
+
+# Перезапуск соединения
+nmcli connection down "Connection-Name"
+nmcli connection up "Connection-Name"
+```
+
+### Настройка через systemd-networkd (ручной способ)
+
+**1. Создание конфигурационного файла:**
+```bash
+# Создание файла конфигурации
+sudo nano /etc/systemd/network/10-eth0.network
+```
+
+**2. Содержимое файла:**
+```ini
+[Match]
+Name=eth0
+
+[Network]
+Address=192.168.1.100/24
+Gateway=192.168.1.1
+DNS=8.8.8.8
+DNS=1.1.1.1
+
+[Link]
+MTUBytes=1500
+```
+
+**3. Активация конфигурации:**
+```bash
+# Включение systemd-networkd
+sudo systemctl enable systemd-networkd
+sudo systemctl start systemd-networkd
+
+# Проверка состояния
+systemctl status systemd-networkd
+```
+
+### Таблица: Сравнение методов ручной настройки
+
+| Метод | Сложность | Гибкость | Стабильность | Рекомендации |
+|-------|-----------|----------|--------------|-------------|
+| ip команды | Низкая | Высокая | Низкая | Для временных настроек |
+| /etc/net | Средняя | Средняя | Высокая | Для серверов |
+| NetworkManager | Средняя | Высокая | Средняя | Для рабочих станций |
+| systemd-networkd | Низкая | Средняя | Высокая | Для серверов |
+
+### Диагностика ручной настройки
+
+**1. Проверка конфигурации:**
+```bash
+# Проверка IP-адреса
+ip addr show eth0
+
+# Проверка маршрутов
+ip route show
+
+# Проверка DNS
+cat /etc/resolv.conf
+
+# Проверка состояния интерфейса
+ip link show eth0
+```
+
+**2. Тестирование соединения:**
+```bash
+# Проверка связи с шлюзом
+ping -c 4 192.168.1.1
+
+# Проверка DNS
+nslookup google.com
+
+# Проверка маршрутизации
+traceroute google.com
+```
+
+**3. Проверка логов:**
+```bash
+# Просмотр системных логов
+journalctl -f
+
+# Просмотр логов сети
+tail -f /var/log/messages | grep network
+```
+
+### Типичные проблемы при ручной настройке
+
+**1. Ошибки в IP-адресах:**
+```bash
+# Проверка на конфликты
+arping -I eth0 192.168.1.100
+
+# Проверка правильности маски
+ip addr show eth0 | grep inet
+```
+
+**2. Проблемы с маршрутизацией:**
+```bash
+# Проверка таблицы маршрутизации
+ip route show
+
+# Проверка доступности шлюза
+ping 192.168.1.1
+```
+
+**3. Проблемы с DNS:**
+```bash
+# Проверка DNS-серверов
+cat /etc/resolv.conf
+
+# Тестирование DNS
+nslookup google.com 8.8.8.8
+```
+
+Ручная настройка сетевых параметров требует внимательности и понимания сетевых технологий, но предоставляет максимальный контроль над конфигурацией.
+
+## PPPoE соединения
+
+PPPoE (Point-to-Point Protocol over Ethernet) — это протокол, используемый для подключения к интернету через Ethernet-сеть, особенно популярный у провайдеров широкополосного доступа.
+
+### Принципы работы PPPoE
+
+**1. Архитектура PPPoE:**
+- Клиент PPPoE инициирует соединение
+- Происходит обнаружение PPPoE-сервера
+- Устанавливается PPP-сессия
+- Назначаются сетевые параметры
+
+**2. Этапы установления соединения:**
+```bash
+# 1. Discovery Phase - обнаружение сервера
+# 2. Session Phase - установление PPP-сессии
+# 3. Data Transfer - передача данных
+# 4. Termination - завершение соединения
+```
+
+### Настройка PPPoE через /etc/net
+
+**1. Создание конфигурации:**
+```bash
+# Создание каталога для PPPoE
+sudo mkdir -p /etc/net/ifaces/ppp0
+
+# Создание файла options
+echo "type=pppoe
+name=ppp0
+onboot=yes
+provider=MyProvider" | sudo tee /etc/net/ifaces/ppp0/options
+
+# Создание файла с учетными данными
+echo "username=your_username
+password=your_password" | sudo tee /etc/ppp/chap-secrets
+```
+
+**2. Настройка провайдера:**
+```bash
+# Создание конфигурации провайдера
+sudo nano /etc/ppp/peers/MyProvider
+```
+
+**Содержимое файла:**
+```
+pty "pppoe -I eth0 -T 80 -m 1412"
+name your_username
+usepeerdns
+defaultroute
+noauth
+```
+
+**3. Запуск PPPoE:**
+```bash
+# Запуск PPPoE-соединения
+sudo pon MyProvider
+
+# Проверка состояния
+ip addr show ppp0
+
+# Остановка соединения
+sudo poff MyProvider
+```
+
+### Настройка PPPoE через NetworkManager
+
+**1. Создание PPPoE-соединения:**
+```bash
+# Создание PPPoE-соединения
+nmcli connection add type pppoe con-name "PPPoE-Home" ifname eth0
+
+# Настройка параметров
+nmcli connection modify "PPPoE-Home" pppoe.parent eth0
+nmcli connection modify "PPPoE-Home" pppoe.username "your_username"
+nmcli connection modify "PPPoE-Home" pppoe.password "your_password"
+
+# Активация соединения
+nmcli connection up "PPPoE-Home"
+```
+
+**2. Проверка состояния:**
+```bash
+# Просмотр состояния PPPoE
+nmcli device status
+
+# Просмотр детальной информации
+nmcli connection show "PPPoE-Home"
+```
+
+### Настройка PPPoE через rp-pppoe
+
+**1. Установка rp-pppoe:**
+```bash
+# Установка пакета
+sudo apt-get install rp-pppoe
+
+# Запуск мастера настройки
+sudo pppoe-setup
+```
+
+**2. Конфигурация через мастера:**
+```bash
+# Следование инструкциям мастера
+# Ввод учетных данных провайдера
+# Настройка параметров соединения
+```
+
+**3. Запуск и остановка:**
+```bash
+# Запуск PPPoE
+sudo /etc/init.d/pppoe start
+
+# Остановка PPPoE
+sudo /etc/init.d/pppoe stop
+```
+
+### Диагностика PPPoE-соединений
+
+**1. Проверка состояния:**
+```bash
+# Проверка состояния интерфейса
+ip link show ppp0
+
+# Проверка IP-адреса
+ip addr show ppp0
+
+# Проверка маршрутов
+ip route show
+```
+
+**2. Проверка логов:**
+```bash
+# Просмотр логов PPP
+tail -f /var/log/ppp.log
+
+# Просмотр системных логов
+journalctl -u pppoe -f
+```
+
+**3. Тестирование соединения:**
+```bash
+# Проверка связи с шлюзом
+ping -c 4 192.168.1.1
+
+# Проверка доступа в интернет
+ping -c 4 8.8.8.8
+
+# Проверка DNS
+nslookup google.com
+```
+
+### Типичные проблемы с PPPoE
+
+**1. Проблемы с аутентификацией:**
+```bash
+# Проверка учетных данных
+cat /etc/ppp/chap-secrets
+
+# Проверка логов аутентификации
+tail -f /var/log/ppp.log | grep -i auth
+```
+
+**2. Проблемы с обнаружением сервера:**
+```bash
+# Проверка физического соединения
+ethtool eth0
+
+# Проверка широковещательного трафика
+sudo tcpdump -i eth0 -n port 3784 or port 3785
+```
+
+**3. Проблемы с маршрутизацией:**
+```bash
+# Проверка таблицы маршрутизации
+ip route show
+
+# Проверка наличия маршрута по умолчанию
+ip route | grep default
+```
+
+### Преимущества и недостатки PPPoE
+
+**Преимущества:**
+- Поддержка аутентификации
+- Возможность учета трафика
+- Поддержка различных провайдеров
+- Совместимость с большинством роутеров
+
+**Недостатки:**
+- Дополнительная нагрузка на процессор
+- Ограничение MTU
+- Зависимость от провайдера
+- Сложность диагностики
+
+PPPoE — надежный способ подключения к интернету, особенно популярный у провайдеров широкополосного доступа.
+
+## Межсетевой экран в ОС «Альт»
+
+Межсетевой экран (firewall) — это важнейший элемент системы безопасности, контролирующий входящий и исходящий сетевой трафик в соответствии с заданными правилами.
+
+### Архитектура межсетевого экрана в ОС «Альт»
+
+**1. Уровни фильтрации:**
+- **Ядро (kernel level)** — netfilter
+- **Пользовательский уровень** — iptables/nftables
+- **Управление** — firewalld
+
+**2. Компоненты:**
+- **netfilter** — ядерный фреймворк для фильтрации
+- **iptables/nftables** — инструменты для настройки правил
+- **firewalld** — демон для управления firewall
+- **firewall-cmd** — командная утилита
+
+### firewalld — современный firewall
+
+**1. Основные понятия:**
+- **Зоны (zones)** — наборы правил для различных типов сетей
+- **Правила (rules)** — конкретные инструкции для трафика
+- **Сервисы (services)** — предопределенные наборы правил
+- **Порты (ports)** — конкретные порты для разрешения/блокировки
+
+**2. Типы зон:**
+```bash
+# Просмотр доступных зон
+sudo firewall-cmd --get-zones
+
+# Просмотр активных зон
+sudo firewall-cmd --get-active-zones
+```
+
+**Типичные зоны:**
+- **public** — публичные сети (по умолчанию)
+- **home** — домашние сети
+- **work** — рабочие сети
+- **trusted** — доверенные сети
+- **block** — блокировка всего трафика
+- **drop** — отбрасывание пакетов без уведомления
+
+### Управление firewalld
+
+**1. Основные команды:**
+```bash
+# Проверка состояния firewall
+sudo firewall-cmd --state
+
+# Просмотр статуса службы
+sudo systemctl status firewalld
+
+# Запуск firewall
+sudo systemctl start firewalld
+
+# Остановка firewall
+sudo systemctl stop firewalld
+
+# Включение автозапуска
+sudo systemctl enable firewalld
+
+# Отключение автозапуска
+sudo systemctl disable firewalld
+```
+
+**2. Работа с зонами:**
+```bash
+# Просмотр активных зон
+sudo firewall-cmd --get-active-zones
+
+# Установка зоны по умолчанию
+sudo firewall-cmd --set-default-zone=home
+
+# Добавление интерфейса в зону
+sudo firewall-cmd --zone=public --add-interface=eth0
+
+# Удаление интерфейса из зоны
+sudo firewall-cmd --zone=public --remove-interface=eth0
+```
+
+**3. Работа с сервисами:**
+```bash
+# Просмотр доступных сервисов
+sudo firewall-cmd --get-services
+
+# Добавление сервиса в зону
+sudo firewall-cmd --zone=public --add-service=http
+
+# Удаление сервиса из зоны
+sudo firewall-cmd --zone=public --remove-service=http
+
+# Просмотр сервисов в зоне
+sudo firewall-cmd --zone=public --list-services
+```
+
+**4. Работа с портами:**
+```bash
+# Открытие порта
+sudo firewall-cmd --zone=public --add-port=8080/tcp
+
+# Закрытие порта
+sudo firewall-cmd --zone=public --remove-port=8080/tcp
+
+# Просмотр открытых портов
+sudo firewall-cmd --zone=public --list-ports
+```
+
+### nftables — современная альтернатива iptables
+
+**1. Основные команды:**
+```bash
+# Просмотр таблиц
+sudo nft list tables
+
+# Просмотр цепочек
+sudo nft list chains
+
+# Просмотр правил
+sudo nft list ruleset
+```
+
+**2. Создание таблицы:**
+```bash
+# Создание таблицы
+sudo nft create table inet filter
+
+# Создание цепочки
+sudo nft create chain inet filter input { type filter hook input priority 0 \; }
+
+# Добавление правила
+sudo nft add rule inet filter input tcp dport 22 accept
+```
+
+**3. Пример конфигурации:**
+```bash
+# Базовая конфигурация
+sudo nft add table inet filter
+sudo nft add chain inet filter input { type filter hook input priority 0 \; policy drop \; }
+sudo nft add chain inet filter forward { type filter hook forward priority 0 \; policy drop \; }
+sudo nft add chain inet filter output { type filter hook output priority 0 \; policy accept \; }
+
+# Правила для входящего трафика
+sudo nft add rule inet filter input ct state established,related accept
+sudo nft add rule inet filter input iif lo accept
+sudo nft add rule inet filter input tcp dport 22 accept
+sudo nft add rule inet filter input icmp type echo-request accept
+```
+
+### Таблица: Сравнение firewall-решений
+
+| Решение | Сложность | Гибкость | Производительность | Рекомендации |
+|---------|-----------|----------|-------------------|-------------|
+| firewalld | Низкая | Средняя | Средняя | Для новичков |
+| iptables | Средняя | Высокая | Высокая | Для опытных |
+| nftables | Средняя | Очень высокая | Очень высокая | Для профессионалов |
+
+### Диагностика firewall
+
+**1. Проверка состояния:**
+```bash
+# Проверка состояния firewalld
+sudo firewall-cmd --state
+
+# Проверка активных зон
+sudo firewall-cmd --get-active-zones
+
+# Просмотр всех правил
+sudo firewall-cmd --list-all-zones
+```
+
+**2. Тестирование правил:**
+```bash
+# Тестирование доступа к порту
+nc -zv localhost 22
+
+# Проверка блокировки
+sudo firewall-cmd --query-port=8080/tcp
+```
+
+**3. Просмотр логов:**
+```bash
+# Просмотр логов firewall
+sudo journalctl -u firewalld -f
+
+# Просмотр логов netfilter
+sudo dmesg | grep -i firewall
+```
+
+### Безопасность firewall
+
+**1. Лучшие практики:**
+- По умолчанию блокировать весь трафик
+- Разрешать только необходимые сервисы
+- Регулярно обновлять правила
+- Вести логирование подозрительной активности
+
+**2. Мониторинг:**
+```bash
+# Просмотр статистики
+sudo firewall-cmd --list-all-zones
+
+# Просмотр активных соединений
+sudo ss -tuln
+```
+
+**3. Резервное копирование:**
+```bash
+# Экспорт конфигурации
+sudo firewall-cmd --get-active-zones > firewall-backup.txt
+sudo firewall-cmd --list-all-zones >> firewall-backup.txt
+```
+
+Правильная настройка межсетевого экрана — основа безопасности любой сети.
+
+## Настройка маршрутизации
+
+Маршрутизация — это процесс выбора пути для передачи сетевого трафика от источника к получателю. Понимание маршрутизации необходимо для настройки сложных сетевых конфигураций.
+
+### Основы маршрутизации
+
+**1. Таблица маршрутизации:**
+```bash
+# Просмотр таблицы маршрутизации
+ip route show
+
+# Просмотр всех таблиц
+ip route show table all
+```
+
+**2. Типы маршрутов:**
+- **Прямые маршруты** — для локальных сетей
+- **Статические маршруты** — заданные вручную
+- **Динамические маршруты** — полученные от протоколов маршрутизации
+- **Маршрут по умолчанию** — для неизвестных сетей
+
+### Статическая маршрутизация
+
+**1. Добавление статического маршрута:**
+```bash
+# Добавление маршрута к сети
+sudo ip route add 10.0.0.0/24 via 192.168.1.1 dev eth0
+
+# Добавление маршрута по умолчанию
+sudo ip route add default via 192.168.1.1 dev eth0
+
+# Добавление маршрута с метрикой
+sudo ip route add 10.0.0.0/24 via 192.168.1.1 dev eth0 metric 100
+```
+
+**2. Удаление маршрута:**
+```bash
+# Удаление маршрута
+sudo ip route del 10.0.0.0/24 via 192.168.1.1 dev eth0
+
+# Удаление маршрута по умолчанию
+sudo ip route del default
+```
+
+**3. Постоянные маршруты:**
+```bash
+# Добавление в конфигурацию
+sudo nano /etc/iproute2/rt_tables
+
+# Добавление маршрута в файл
+echo "100 custom" | sudo tee -a /etc/iproute2/rt_tables
+```
+
+### Маршрутизация через /etc/net
+
+**1. Конфигурация статических маршрутов:**
+```bash
+# Создание файла маршрутов
+sudo nano /etc/net/routes
+```
+
+**Содержимое файла:**
+```
+# Сеть Шлюз Интерфейс Метрика
+10.0.0.0 192.168.1.1 eth0 100
+default 192.168.1.1 eth0 0
+```
+
+**2. Конфигурация через systemd-networkd:**
+```ini
+# /etc/systemd/network/10-eth0.network
+[Match]
+Name=eth0
+
+[Network]
+Address=192.168.1.100/24
+Gateway=192.168.1.1
+
+[Route]
+Destination=10.0.0.0/24
+Gateway=192.168.1.1
+Metric=100
+```
+
+### Маршрутизация через NetworkManager
+
+**1. Добавление маршрута:**
+```bash
+# Добавление маршрута к соединению
+nmcli connection modify "Connection-Name" ipv4.routes "10.0.0.0/24 192.168.1.1"
+
+# Добавление маршрута по умолчанию
+nmcli connection modify "Connection-Name" ipv4.gateway "192.168.1.1"
+
+# Перезапуск соединения
+nmcli connection down "Connection-Name"
+nmcli connection up "Connection-Name"
+```
+
+### Диагностика маршрутизации
+
+**1. Проверка таблицы маршрутизации:**
+```bash
+# Просмотр таблицы маршрутизации
+ip route show
+
+# Просмотр конкретного маршрута
+ip route get 10.0.0.1
+```
+
+**2. Трассировка маршрута:**
+```bash
+# Трассировка до цели
+traceroute 8.8.8.8
+
+# Трассировка с подробной информацией
+traceroute -n 8.8.8.8
+```
+
+**3. Проверка доступности:**
+```bash
+# Проверка связи с шлюзом
+ping -c 4 192.168.1.1
+
+# Проверка связи с удаленной сетью
+ping -c 4 10.0.0.1
+```
+
+### Типичные проблемы с маршрутизацией
+
+**1. Отсутствие маршрута:**
+```bash
+# Проверка таблицы маршрутизации
+ip route show
+
+# Проверка маршрута до цели
+ip route get 10.0.0.1
+```
+
+**2. Неправильный шлюз:**
+```bash
+# Проверка доступности шлюза
+ping 192.168.1.1
+
+# Проверка ARP-таблицы
+arp -a
+```
+
+**3. Циклы маршрутизации:**
+```bash
+# Проверка трассировки
+traceroute 8.8.8.8
+
+# Проверка на наличие петель
+ip route show | grep -E "(loop|cycle)"
+```
+
+### Продвинутая маршрутизация
+
+**1. Policy-based routing:**
+```bash
+# Создание дополнительной таблицы
+echo "200 vpn" | sudo tee -a /etc/iproute2/rt_tables
+
+# Добавление маршрутов в таблицу
+sudo ip route add 10.0.0.0/24 dev tun0 table vpn
+sudo ip route add default via 10.8.0.1 dev tun0 table vpn
+
+# Добавление правил
+sudo ip rule add from 192.168.1.100 table vpn
+sudo ip rule add to 192.168.1.100 table vpn
+```
+
+**2. Маршрутизация по портам:**
+```bash
+# Использование TPROXY для маршрутизации по портам
+sudo ip route add local 0.0.0.0/0 dev lo table 100
+sudo ip rule add fwmark 1 lookup 100
+```
+
+Правильная настройка маршрутизации — ключ к стабильной и эффективной работе сети.
+
+## NAT (Network Address Translation)
+
+NAT — это технология преобразования сетевых адресов, позволяющая нескольким устройствам в локальной сети использовать один публичный IP-адрес для доступа в интернет.
+
+### Принципы работы NAT
+
+**1. Типы NAT:**
+- **SNAT (Source NAT)** — преобразование исходного адреса
+- **DNAT (Destination NAT)** — преобразование целевого адреса
+- **MASQUERADE** — динамический SNAT
+
+**2. Принцип работы:**
+```bash
+# Внутренний адрес: 192.168.1.100:80
+# Внешний адрес: 203.0.113.1:12345
+# Таблица трансляции:
+# 192.168.1.100:80 -> 203.0.113.1:12345
+```
+
+### Настройка NAT через iptables
+
+**1. MASQUERADE для выхода в интернет:**
+```bash
+# Включение IP-форвардинга
+echo "net.ipv4.ip_forward = 1" | sudo tee -a /etc/sysctl.conf
+sudo sysctl -p
+
+# Настройка MASQUERADE
+sudo iptables -t nat -A POSTROUTING -s 192.168.1.0/24 -o eth0 -j MASQUERADE
+
+# Сохранение правил
+sudo iptables-save > /etc/iptables/rules.v4
+```
+
+**2. DNAT для проброса портов:**
+```bash
+# Проброс порта 80 на внутренний сервер
+sudo iptables -t nat -A PREROUTING -p tcp --dport 80 -j DNAT --to-destination 192.168.1.100:80
+
+# Разрешение пересылки
+sudo iptables -A FORWARD -p tcp -d 192.168.1.100 --dport 80 -j ACCEPT
+```
+
+### Настройка NAT через nftables
+
+**1. Базовая конфигурация:**
+```bash
+# Создание таблицы
+sudo nft add table ip nat
+
+# Создание цепочки для POSTROUTING
+sudo nft add chain ip nat postrouting { type nat hook postrouting priority 100 \; }
+
+# Добавление правила MASQUERADE
+sudo nft add rule ip nat postrouting ip saddr 192.168.1.0/24 oif eth0 masquerade
+```
+
+**2. DNAT через nftables:**
+```bash
+# Создание цепочки для PREROUTING
+sudo nft add chain ip nat prerouting { type nat hook prerouting priority -100 \; }
+
+# Добавление правила DNAT
+sudo nft add rule ip nat prerouting tcp dport 80 dnat to 192.168.1.100:80
+```
+
+### Настройка NAT через firewalld
+
+**1. Маскарадинг:**
+```bash
+# Включение маскарадинга для зоны
+sudo firewall-cmd --zone=external --add-masquerade
+
+# Постоянное включение
+sudo firewall-cmd --zone=external --add-masquerade --permanent
+
+# Перезагрузка firewall
+sudo firewall-cmd --reload
+```
+
+**2. Проброс портов:**
+```bash
+# Проброс порта
+sudo firewall-cmd --zone=external --add-forward-port=port=80:proto=tcp:toport=8080:toaddr=192.168.1.100
+
+# Постоянный проброс
+sudo firewall-cmd --zone=external --add-forward-port=port=80:proto=tcp:toport=8080:toaddr=192.168.1.100 --permanent
+
+# Перезагрузка firewall
+sudo firewall-cmd --reload
+```
+
+### Диагностика NAT
+
+**1. Проверка таблицы трансляции:**
+```bash
+# Просмотр таблицы соединений
+sudo cat /proc/net/nf_conntrack | grep -i nat
+
+# Просмотр статистики
+sudo nstat -az | grep -i nat
+```
+
+**2. Тестирование NAT:**
+```bash
+# Проверка выхода в интернет
+curl ifconfig.me
+
+# Проверка проброса портов
+nc -zv external-ip 80
+```
+
+**3. Просмотр логов:**
+```bash
+# Просмотр логов iptables
+sudo journalctl -f | grep -i iptables
+
+# Просмотр логов nftables
+sudo journalctl -f | grep -i nftables
+```
+
+### Типичные проблемы с NAT
+
+**1. Нет доступа в интернет:**
+```bash
+# Проверка IP-форвардинга
+cat /proc/sys/net/ipv4/ip_forward
+
+# Проверка правил NAT
+sudo iptables -t nat -L -n
+```
+
+**2. Не работает проброс портов:**
+```bash
+# Проверка правил DNAT
+sudo iptables -t nat -L PREROUTING -n
+
+# Проверка правил FORWARD
+sudo iptables -L FORWARD -n
+```
+
+**3. Проблемы с состоянием соединений:**
+```bash
+# Проверка таблицы соединений
+sudo cat /proc/net/nf_conntrack | wc -l
+
+# Очистка таблицы соединений (осторожно!)
+sudo echo 1 > /proc/sys/net/netfilter/nf_conntrack_tcp_be_liberal
+```
+
+### Преимущества и недостатки NAT
+
+**Преимущества:**
+- Экономия публичных IP-адресов
+- Скрытие внутренней сети
+- Упрощение управления сетью
+
+**Недостатки:**
+- Сложность диагностики
+- Проблемы с некоторыми протоколами
+- Ограничение функциональности P2P
+
+NAT — важная технология для организации доступа в интернет и обеспечения безопасности локальной сети.
+
+## Заключение
+
+В этой лекции мы изучили сложные аспекты настройки сетевых параметров в ОС «Альт». Мы рассмотрели ручную настройку, PPPoE-соединения, межсетевой экран, маршрутизацию и NAT.
+
+**Ключевые моменты:**
+- Ручная настройка сетевых параметров
+- Настройка PPPoE-соединений
+- Архитектура и настройка межсетевого экрана
+- Принципы маршрутизации
+- Технология NAT и ее настройка
+
+**Инструменты и технологии:**
+- ip команды для ручной настройки
+- PPPoE для подключения к провайдерам
+- firewalld и nftables для защиты сети
+- Статическая и динамическая маршрутизация
+- NAT для преобразования адресов
+
+**Лучшие практики:**
+- Тщательное тестирование конфигураций
+- Ведение документации изменений
+- Регулярный мониторинг состояния сети
+- Соблюдение принципов безопасности
+
+**Связь с лабораторными работами:**
+- Лабораторное занятие №7: Настройка сетевых параметров и межсетевого экрана
+
+**Чек-лист для самопроверки:**
+- [ ] Могу настроить сетевые параметры вручную
+- [ ] Владею настройкой PPPoE-соединений
+- [ ] Понимаю архитектуру межсетевого экрана
+- [ ] Умею настраивать firewalld и nftables
+- [ ] Понимаю принципы маршрутизации
+- [ ] Владею настройкой NAT
+- [ ] Могу диагностировать сетевые проблемы
+- [ ] Знаю принципы безопасности сети
+
+**Рекомендации для дальнейшего изучения:**
+- Изучение VPN и защищенных соединений
+- Изучение мониторинга сетевой активности
+- Изучение сетевой виртуализации
+- Изучение протоколов динамической маршрутизации
+
+Эффективное управление сложными сетевыми конфигурациями — важнейший навык системного администратора, обеспечивающий стабильную и безопасную работу сети.
+
+## Вопросы для самоконтроля
+
+1. Какие методы ручной настройки сетевых параметров существуют?
+2. Как настроить PPPoE-соединение?
+3. Какие компоненты входят в архитектуру межсетевого экрана?
+4. Как работают зоны в firewalld?
+5. Как настроить статическую маршрутизацию?
+6. В чем разница между SNAT и DNAT?
+7. Как диагностировать проблемы с NAT?
+8. Какие преимущества и недостатки у различных firewall-решений?
+9. Как настроить проброс портов через firewall?
+10. Какие лучшие практики безопасности сети существуют?
+
+## Практические задания
+
+**Задание 1: Настройка PPPoE**
+1. Настройте PPPoE-соединение через NetworkManager
+2. Проверьте работу соединения
+3. Настройте автоматический запуск при загрузке
+4. Протестируйте стабильность соединения
+
+**Задание 2: Настройка firewall**
+1. Настройте firewalld с несколькими зонами
+2. Создайте правила для различных сервисов
+3. Настройте проброс портов
+4. Протестируйте работу firewall
+
+**Задание 3: Настройка маршрутизации**
+1. Настройте статические маршруты
+2. Создайте policy-based routing
+3. Протестируйте маршрутизацию
+4. Проверьте отказоустойчивость
+
+**Задание 4: Настройка NAT**
+1. Настройте MASQUERADE для выхода в интернет
+2. Настройте DNAT для проброса портов
+3. Протестируйте работу NAT
+4. Проверьте производительность
+
+## Глоссарий терминов
+
+- **PPPoE**: Point-to-Point Protocol over Ethernet — протокол PPP поверх Ethernet
+- **Firewall**: Межсетевой экран — система фильтрации сетевого трафика
+- **NAT**: Network Address Translation — преобразование сетевых адресов
+- **SNAT**: Source NAT — преобразование исходного адреса
+- **DNAT**: Destination NAT — преобразование целевого адреса
+- **MASQUERADE**: Динамический SNAT
+- **Маршрутизация**: Процесс выбора пути для передачи трафика
+- **Статическая маршрутизация**: Ручная настройка маршрутов
+- **Policy-based routing**: Маршрутизация на основе политик
+- **Зона firewall**: Набор правил для определенного типа сети
+- **Сервис firewall**: Предопределенный набор правил
+- **Правило firewall**: Конкретная инструкция для трафика
+- **Таблица маршрутизации**: Список маршрутов в системе
+- **IP-форвардинг**: Пересылка IP-пакетов между интерфейсами
+
+## Литература
+
+- Официальная документация ОС «Альт»: https://docs.altlinux.org/
+- Руководство по firewalld: https://firewalld.org/documentation/
+- Руководство по nftables: https://wiki.nftables.org/
+- Книга "TCP/IP Illustrated" (W. Richard Stevens)
+- Книга "Linux Network Administrator's Guide" (Olaf Kirch, Terry Dawson)
+- Документация по PPPoE: https://tools.ietf.org/html/rfc2516
+- Книга "The Linux Command Line" (William Shotts)
+- Книга "UNIX Network Programming" (W. Richard Stevens)
+- Книга "Network Security with Netfilter and iptables" (Tony Fischetti)
